--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button onclick="showBook()" class="btn btn-success" type="button" id="search">Search</button>
         </div>
 
-        <!-- Search Count -->
+        <!-- Search Count Show-->
         <div id="search-count">
 
         </div>
@@ -28,7 +28,8 @@
 
         </div>
     </main>
-    
+
+    <!-- Javascript -->
     <script src="js/app.js"></script>
 </body>
 </html>
